Applications/Planka/planka/templates/postgre_networkpolicies.yaml
# TODO: Parametrize this / valueify
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: planka-to-postgresql
  namespace: apps
spec:
  podSelector:
    matchLabels:
      app: postgresql
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: planka
    ports:
    - protocol: TCP
      port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: planka-egress-to-postgresql
  namespace: apps
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: planka
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: postgresql
    ports:
    - protocol: TCP
      port: 5432
  # Allow DNS resolution
  - to: []
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
